tests/ui/async-await/higher-ranked-auto-trait-11.no_assumptions.stderr
error: lifetime may not live long enough
  --> $DIR/higher-ranked-auto-trait-11.rs:27:9
   |
LL | impl<'a, T> Foo<'a> for MyType<T>
   |      -- lifetime `'a` defined here
...
LL |         Box::pin(async move { <T as Foo<'a>>::foo().await })
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ coercion requires that `'a` must outlive `'static`

error: implementation of `Send` is not general enough
  --> $DIR/higher-ranked-auto-trait-11.rs:27:9
   |
LL |         Box::pin(async move { <T as Foo<'a>>::foo().await })
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `Send` is not general enough
   |
   = note: `<T as Foo<'0>>::Future` must implement `Send`, for any lifetime `'0`...
   = note: ...but `Send` is actually implemented for the type `<T as Foo<'_>>::Future`

error: aborting due to 2 previous errors

